added "keys manager" examples

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,9 @@
 #
 #
 #
-PROGRAMS	 = dsig1 dsig2 dsig3 enc1 enc2 enc3
+PROGRAMS	 = \
+	dsig1 dsig2 dsig3 dsig4 \
+	enc1 enc2 enc3 enc4
 
 cc	 	 = gcc
 CC	 	 = gcc
@@ -19,3 +21,16 @@ all: $(PROGRAMS)
 clean:
 	@rm -rf $(PROGRAMS)
 
+check: $(PROGRAMS)
+	./dsig1 dsig1-tmpl.xml rsakey.pem
+	./dsig2 dsig2-doc.xml  rsakey.pem
+	./dsig3 dsig1-res.xml  rsapub.pem
+	./dsig3 dsig2-res.xml  rsapub.pem
+	./dsig4 dsig1-res.xml  rsapub.pem
+	./dsig4 dsig2-res.xml  rsapub.pem
+	./enc1  enc1-tmpl.xml  deskey.bin
+	./enc2  enc2-doc.xml   deskey.bin 
+	./enc3  enc1-res.xml   deskey.bin
+	./enc3  enc2-res.xml   deskey.bin
+	./enc4  enc1-res.xml   deskey.bin
+	./enc4  enc2-res.xml   deskey.bin
