added one more exampe and a new method to generate keys

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 #
 PROGRAMS	 = \
 	dsig1 dsig2 dsig3 dsig4 \
-	enc1 enc2 enc3 enc4 enc5
+	enc1 enc2 enc3 enc4 enc5 enc6
 
 cc	 	 = gcc
 CC	 	 = gcc
@@ -30,9 +30,9 @@ check: $(PROGRAMS)
 	./dsig4 dsig2-res.xml  rsapub.pem
 	./enc1  enc1-tmpl.xml  deskey.bin
 	./enc2  enc2-doc.xml   deskey.bin 
-	./enc3  enc1-res.xml   deskey.bin
-	./enc3  enc2-res.xml   deskey.bin
 	./enc4  enc1-res.xml   deskey.bin
 	./enc4  enc2-res.xml   deskey.bin
-	./enc5  enc1-res.xml
-	./enc5  enc2-res.xml
+	./enc5  enc1-res.xml   deskey.bin
+	./enc5  enc2-res.xml   deskey.bin
+	./enc6  enc1-res.xml
+	./enc6  enc2-res.xml
