--- a/examples/.cvsignore
+++ b/examples/.cvsignore
@@ -1,11 +1,11 @@
-dsig1
-dsig2
-dsig3
-dsig4
-enc1
-enc2
-enc3
-enc4
-enc5
-enc6
+sign1
+sign2
+verify1
+verify2
+encrypt1
+encrypt2
+encrypt3
+decrypt1
+decrypt2
+decrypt3
 .kdbgrc*
