added '-release' option for libtool as suggested by John

--- a/configure.in
+++ b/configure.in
@@ -7,12 +7,14 @@ XMLSEC_VERSION_SUBMINOR=1
 XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
 VERSION=$XMLSEC_VERSION
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
+XMLSEC_RELEASE_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d.%d", $1, $2}'`
 
 AC_SUBST(XMLSEC_VERSION)
 AC_SUBST(XMLSEC_VERSION_MAJOR)
 AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
 AC_SUBST(XMLSEC_VERSION_INFO)
+AC_SUBST(XMLSEC_RELEASE_INFO)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
