--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,9 @@ $(LIBXSLT_LIBS) \
 $(LIBXML_LIBS) \
 $(NULL)
         
-libxmlsec_la_LDFLAGS = -version-info @XMLSEC_VERSION_INFO@
+libxmlsec_la_LDFLAGS = \
+    -version-info @XMLSEC_VERSION_INFO@ \
+    -release @XMLSEC_RELEASE_INFO@
 
 # what is this include dir ?
 libxmlsecincdir = $(includedir)/xmlsec
