migrated to xmlsec-0.1 folders for includes and libraries

--- a/configure.in
+++ b/configure.in
@@ -1,20 +1,22 @@
 AC_INIT(src/xmlsec.c)
 
-PACKAGE=xmlsec
 XMLSEC_VERSION_MAJOR=0
 XMLSEC_VERSION_MINOR=1
 XMLSEC_VERSION_SUBMINOR=1
-XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
-VERSION=$XMLSEC_VERSION
-XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
-XMLSEC_RELEASE_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d.%d", $1, $2}'`
 
+XMLSEC_RELEASE=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR
+XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
+XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
+
+PACKAGE=xmlsec-$XMLSEC_RELEASE
+VERSION=$XMLSEC_VERSION
+
+AC_SUBST(XMLSEC_RELEASE)
 AC_SUBST(XMLSEC_VERSION)
 AC_SUBST(XMLSEC_VERSION_MAJOR)
 AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
 AC_SUBST(XMLSEC_VERSION_INFO)
-AC_SUBST(XMLSEC_RELEASE_INFO)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
@@ -640,11 +642,10 @@ AM_CONDITIONAL(XMLSEC_DYNAMIC_LINKING, test "$enable_dynamic" = "yes")
 dnl ==========================================================================
 dnl Final steps: xmlsec config
 dnl ==========================================================================
-XMLSEC_LIBDIR='-L${libdir}'
-XMLSEC_CFLAGS="$XMLSEC_DEFINES -I${includedir} $LIBXML_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
-XMLSEC_LIBS="-l$XMLSEC_CRYPTO_LIB -lxmlsec $LIBXML_LIBS $LIBXSLT_LIBS $XMLSEC_CRYPTO_LIBS"
-AC_SUBST(XMLSEC_LIBDIR)
-AC_SUBST(XMLSEC_INCLUDEDIR)
+XMLSEC_CFLAGS="$XMLSEC_DEFINES -I${pkgincludedir} $LIBXML_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\""
+XMLSEC_LIBS="-L${pkglibdir} -l$XMLSEC_CRYPTO_LIB -lxmlsec $LIBXML_LIBS $LIBXSLT_LIBS $XMLSEC_CRYPTO_LIBS"
+
+AC_SUBST(XMLSEC_CFLAGS)
 AC_SUBST(XMLSEC_LIBS)
 
 CFLAGS="$CFLAGS $XMLSEC_DEFINES"
