--- a/src/openssl/Makefile.am
+++ b/src/openssl/Makefile.am
@@ -2,47 +2,47 @@ NULL =
 
 EXTRA_DIST = \
 	globals.h \
-$(NULL)
+	$(NULL)
 
 INCLUDES = \
--I$(top_srcdir) \
--I$(top_srcdir)/include \
-$(XMLSEC_DEFINES) \
-$(XMLSEC_OPENSSL_DEFINES) \
-$(OPENSSL_CFLAGS) \
-$(LIBXSLT_CFLAGS) \
-$(LIBXML_CFLAGS) \
--Wall -ansi \
-$(NULL)
+	-I$(top_srcdir) \
+	-I$(top_srcdir)/include \
+	$(XMLSEC_DEFINES) \
+	$(XMLSEC_OPENSSL_DEFINES) \
+	$(OPENSSL_CFLAGS) \
+	$(LIBXSLT_CFLAGS) \
+	$(LIBXML_CFLAGS) \
+	-Wall -ansi \
+	$(NULL)
 
-lib_LTLIBRARIES = libxmlsec-openssl.la
+pkglib_LTLIBRARIES = \
+	libxmlsec-openssl.la \
+	$(NULL)
 
 libxmlsec_openssl_la_SOURCES =\
-app.c \
-bn.c \
-ciphers.c \
-crypto.c \
-digests.c \
-evp.c \
-hmac.c \
-kw_aes.c \
-kw_des.c \
-kt_rsa.c \
-signatures.c \
-symkeys.c \
-x509.c \
-x509vfy.c \
-$(NULL)
+	app.c \
+	bn.c \
+	ciphers.c \
+	crypto.c \
+	digests.c \
+	evp.c \
+	hmac.c \
+	kw_aes.c \
+	kw_des.c \
+	kt_rsa.c \
+	signatures.c \
+	symkeys.c \
+	x509.c \
+	x509vfy.c \
+	$(NULL)
 
 libxmlsec_openssl_la_LIBADD = \
-$(OPENSSL_LIBS) \
-$(LIBXSLT_LIBS) \
-$(LIBXML_LIBS) \
-$(NULL)
+	$(OPENSSL_LIBS) \
+	$(LIBXSLT_LIBS) \
+	$(LIBXML_LIBS) \
+	$(NULL)
         
 libxmlsec_openssl_la_LDFLAGS = \
-    -version-info @XMLSEC_VERSION_INFO@ \
-    -release @XMLSEC_RELEASE_INFO@
-
-# what is this include dir ?
-libxmlsec_opensslincdir = $(includedir)/xmlsec
+	-version-info @XMLSEC_VERSION_INFO@ \
+	-release @XMLSEC_RELEASE@ \
+	$(NULL)
