--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -53,6 +53,8 @@ libxmlsec_la_LIBADD = \
 libxmlsec_la_LDFLAGS = \
 	-version-info @XMLSEC_VERSION_INFO@ \
 	-release @XMLSEC_RELEASE@ \
+	-rpath $(pkglibdir) \
+	-R $(pkglibdir) \
 	$(NULL)
 
 remove-old-libraries:
