--- a/src/gnutls/Makefile.am
+++ b/src/gnutls/Makefile.am
@@ -37,4 +37,6 @@ libxmlsec_gnutls_la_LIBADD = \
 libxmlsec_gnutls_la_LDFLAGS = \
 	-version-info @XMLSEC_VERSION_INFO@ \
 	-release @XMLSEC_RELEASE@ \
+	-rpath $(pkglibdir) \
+	-R $(pkglibdir) \
 	$(NULL)
