--- a/src/openssl/Makefile.am
+++ b/src/openssl/Makefile.am
@@ -45,4 +45,6 @@ libxmlsec_openssl_la_LIBADD = \
 libxmlsec_openssl_la_LDFLAGS = \
 	-version-info @XMLSEC_VERSION_INFO@ \
 	-release @XMLSEC_RELEASE@ \
+	-rpath $(pkglibdir) \
+	-R $(pkglibdir) \
 	$(NULL)
