fixed all the makefiles for xmlsec1

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -3,6 +3,8 @@ NULL =
 bin_PROGRAMS = xmlsec1
 
 INCLUDES = \
+    -DPACKAGE=\"@PACKAGE@\" \
+    -DVERSION=\"@VERSION@\" \
     -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\" \
     -I$(top_srcdir)/include \
     $(XMLSEC_DEFINES) \
