use XMLSEC_VERSION and XMLSEC_PACKAGE instead of VERSION and PACKAGE

--- a/configure.in
+++ b/configure.in
@@ -1,15 +1,17 @@
 AC_INIT(src/xmlsec.c)
 
+XMLSEC_PACKAGE=xmlsec1
 XMLSEC_VERSION_MAJOR=1
 XMLSEC_VERSION_MINOR=0
 XMLSEC_VERSION_SUBMINOR=0rc1
 XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
 
-PACKAGE=xmlsec1
+PACKAGE=$XMLSEC_PACKAGE
 VERSION=$XMLSEC_VERSION
 
 AC_SUBST(XMLSEC_VERSION)
+AC_SUBST(XMLSEC_PACKAGE)
 AC_SUBST(XMLSEC_VERSION_MAJOR)
 AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
