--- a/xmlsec.pc.in
+++ b/xmlsec.pc.in
@@ -8,4 +8,4 @@ Version: @VERSION@
 Description: XML Security Library implements XML Signature and XML Encryption standards
 Requires: libxml-2.0 >= @LIBXML_MIN_VERSION@ libxslt >= @LIBXSLT_MIN_VERSION@ 
 Libs: -L${libdir} -lxmlsec @LIBXSLT_LIBS@ @LIBXML_LIBS@  @OPENSSL_LIBS@ @LIBS@
-Cflags: @CFLAGS@ -I${includedir}/xmlsec @LIBXSLT_CFLAGS@ @LIBXML_CFLAGS@  @OPENSSL_CFLAGS@
+Cflags: @CFLAGS@ -I${includedir}/xmlsec0 @LIBXSLT_CFLAGS@ @LIBXML_CFLAGS@  @OPENSSL_CFLAGS@
