--- a/configure.in
+++ b/configure.in
@@ -4,14 +4,16 @@ XMLSEC_PACKAGE=xmlsec1
 XMLSEC_VERSION_MAJOR=1
 XMLSEC_VERSION_MINOR=0
 XMLSEC_VERSION_SUBMINOR=0rc1
-XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
+XMLSEC_VERSION="$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR"
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
+XMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
 
 PACKAGE=$XMLSEC_PACKAGE
 VERSION=$XMLSEC_VERSION
 
 AC_SUBST(XMLSEC_VERSION)
 AC_SUBST(XMLSEC_PACKAGE)
+AC_SUBST(XMLSEC_VERSION_SAFE)
 AC_SUBST(XMLSEC_VERSION_MAJOR)
 AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
@@ -687,6 +689,6 @@ man/Makefile
 [xmlsec1Conf.sh:xmlsecConf.sh.in]
 [xmlsec1-config:xmlsec-config.in]
 [xmlsec1.pc:xmlsec.pc.in]
-[xmlsec1-$VERSION.spec:xmlsec.spec.in]
+[xmlsec1.spec:xmlsec.spec.in]
 )
 
