--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -8,8 +8,6 @@ man_MANS = \
 EXTRA_DIST = \
 	xmlsec1.1 \
 	xmlsec1-config.1 \
-	xmlsec.1 \
-	xmlsec-config.1 \
 	$(NULL)
 
 XMLSEC_PROGRAM=$(top_builddir)/apps/xmlsec1
@@ -18,35 +16,32 @@ XMLSEC_HTML=$(top_builddir)/docs/xmlsec-man.html
 
 all:
 
-man: $(man_MANS) 
-
-docs: clean man $(XMLSEC_HTML)
+docs: man-clean man $(XMLSEC_HTML)
 	
 
+man-clean:
+	@rm -rf $(man_MANS)
+
+man: $(man_MANS) 
+
 $(XMLSEC_HTML): xmlsec1.1
-	@man2html xmlsec1.1 | \
+	man2html xmlsec1.1 | \
 		  grep -v '^Content-type: text/html' | \
 		  tr "[:cntrl:]" " " > \
 		  $(XMLSEC_HTML)
 
-xmlsec.1:
+xmlsec1.1:
 	@rm -f xmlsec1.1
-	@help2man --help-option=--help-all \
+	help2man --help-option=--help-all \
 		  --version-option=--version \
-		  $(XMLSEC_PROGRAM) > xmlsec.1
+		  $(XMLSEC_PROGRAM) > xmlsec1.1
 
-xmlsec-config.1:
+xmlsec1-config.1:
 	@chmod 766 $(XMLSEC_CONFIG_PROGRAM)
 	@rm -f xmlsec1-config.1
-	@help2man --help-option=--help \
+	help2man --help-option=--help \
 		  --version-option=--version \
-		  $(XMLSEC_CONFIG_PROGRAM) > xmlsec-config.1
-
-xmlsec1.1: xmlsec.1
-	@cp xmlsec.1 xmlsec1.1
-
-xmlsec1-config.1: xmlsec-config.1
-	@cp xmlsec-config.1 xmlsec1-config.1
+		  $(XMLSEC_CONFIG_PROGRAM) > xmlsec1-config.1
 
 $(XMLSEC_PROGRAM): 
 	@cd ../apps;make
