--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,8 @@
+dnl Process this file with autoconf to produce a configure script.
+AC_PREREQ(2.2)
 AC_INIT(src/xmlsec.c)
+AM_CONFIG_HEADER(config.h)
+AC_CANONICAL_HOST
 
 XMLSEC_PACKAGE=xmlsec1
 XMLSEC_VERSION_MAJOR=1
@@ -6,7 +10,7 @@ XMLSEC_VERSION_MINOR=0
 XMLSEC_VERSION_SUBMINOR=0rc1
 XMLSEC_VERSION="$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR"
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
-XMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
+3BXMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
 
 PACKAGE=$XMLSEC_PACKAGE
 VERSION=$XMLSEC_VERSION
@@ -19,21 +23,17 @@ AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
 AC_SUBST(XMLSEC_VERSION_INFO)
 
-AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 AM_MAINTAINER_MODE
 
 dnl
 dnl Check the environment
 dnl
-
-AC_ISC_POSIX
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_ARG_PROGRAM
 AC_STDC_HEADERS
 AM_PROG_LIBTOOL
-
 AC_PATH_PROG(RM, rm, /bin/rm)
 AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
@@ -42,14 +42,43 @@ dnl Make sure we have an ANSI compiler
 AM_C_PROTOTYPES
 test "x$U" != "x" && AC_MSG_ERROR(Compiler not ANSI compliant)
 
-AC_HEADER_STDC
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS(stdio.h stdlib.h string.h ctype.h errno.h ansidecl.h time.h)
+AC_CHECK_HEADERS([stdio.h])
+AC_CHECK_HEADERS([stdlib.h])
+AC_CHECK_HEADERS([string.h])
+AC_CHECK_HEADERS([ctype.h])
+AC_CHECK_HEADERS([errno.h])
+AC_CHECK_HEADERS([ansidecl.h])
+AC_CHECK_HEADERS([time.h])
 AC_CHECK_FUNCS(printf sprintf fprintf snprintf vfprintf vsprintf vsnprintf sscanf)
 
+
+
+
 XMLSEC_DEFINES=""
+
+
+dnl ==========================================================================
+dnl Specific setup for Aleksey's development environment: 
+dnl	- with debug
+dnl 	- with pedantic compiler flags
+dnl	- with static binaries
+dnl ==========================================================================
+XMLSEC_STATIC_BINARIES=""
+AC_MSG_CHECKING(for development environment) 
+AC_ARG_ENABLE(development,   [  --enable-development       enable development environment (no)])
+if test "$enable_development" = "yes" -o "${LOGNAME}" = "aleksey" ; then
+    dnl CFLAGS="$CFLAGS -pedantic -Wall -ansi -W -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls"
+    CFLAGS="$CFLAGS -g -O -pedantic -Wall -ansi -W -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls"
+    XMLSEC_STATIC_BINARIES="-static"
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+fi    
+AC_SUBST(XMLSEC_STATIC_BINARIES)
+
 dnl ==========================================================================
 dnl find libxml
 dnl ==========================================================================
@@ -609,20 +638,6 @@ else
 fi    
 
 dnl ==========================================================================
-dnl Pedantic compile
-dnl ==========================================================================
-AC_MSG_CHECKING(for pedantic compilation) 
-AC_ARG_ENABLE(pedantic,   [  --enable-pedantic       enable pedantic compilation flags (no)])
-if test "$enable_pedantic" = "yes" ; then
-    dnl    XMLSEC_PEDANTIC="-pedantic -Wall -ansi -W -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls"
-    XMLSEC_PEDANTIC="-pedantic -Wall -ansi -W -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls"
-    CFLAGS="$CFLAGS $XMLSEC_PEDANTIC"
-    AC_MSG_RESULT(yes)
-else
-    AC_MSG_RESULT(no)
-fi    
-
-dnl ==========================================================================
 dnl Profiling 
 dnl ==========================================================================
 AC_MSG_CHECKING(for profiling) 
@@ -633,12 +648,6 @@ if test "$enable_profiling" = "yes" ; then
 else
     AC_MSG_RESULT(no)
 fi    
-
-dnl ==========================================================================
-dnl Dynamic linking
-dnl ==========================================================================
-AC_ARG_ENABLE(dynamic,   [  --enable-dynamic       enable dynamic linking of the xmlsec utility (no)])
-AM_CONDITIONAL(XMLSEC_DYNAMIC_LINKING, test "$enable_dynamic" = "yes")
 
 dnl ==========================================================================
 dnl Final steps: xmlsec config
